# src/routes/index.ts
@@ -1,16 +1,14 @@
 import { Router } from "express";
-import jsonServer from "json-server";
 import { wrapResponse } from "../middleware";
 import systemRoutes from "./systemRoutes";
-import { config } from "../config";
+import employeeRoutes from "./employeeRoutes";
 
 const router = Router();
 
 // System routes
 router.use("/api/v1", systemRoutes);
 
-// JSON Server routes
-const jsonRouter = jsonServer.router(config.dbPath);
-router.use("/api/v1", wrapResponse, jsonRouter);
+// Employee routes
+router.use("/api/v1", employeeRoutes);
 
 export default router;
